welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:5: error: '(' expected but identifier found.
	{for x <- 0 to getMondeLargeur()-1
             ^ColumnByColumn:6: error: '(' expected but identifier found.
		{for y <- 0 to getMondeHauteur()-1
                     ^