welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
var msg = 1
ecritMessage(""+msg)
msg += 1
while (!positionFinale())
	{for x <- 0 to getMondeLargeur()-1
		{for y <- 0 to getMondeHauteur()-1
			{setPos(x,y)
			ecritMessage(""+msg)
			msg += 1}
		}
	}
}

def positionFinale():Boolean= {
		(getX(),getY()) match {
			case (x,y) if (x==getMondeLargeur()-1 && y ==getMondeHauteur()-1) =>
						return true
			case _	=>	return false
		}
}
